# spsheet-rs

./: .gitignore  Cargo.toml  Changelog.md  Readme.md
data/: test.ods  test.xlsx
src/: file_common.rs  format.rs  lib.rs  style.rs
src/ods/: mod.rs  read_content.rs  read_style.rs  write_content.rs  write_style.rs
src/xlsx/: mod.rs  read_shared_strings.rs  read_sheet.rs  read_styles.rs  read_workbook.rs  read_workbook_xml_rels.rs  write_shared_strings.rs  write_sheet.rs  write_styles.rs  write_workbook.rs  write_workbook_xml_rels.rs
tests/: lib.rs
